errors.txt
error[E0432]: unresolved import `smithay::wayland::display`
 --> src/compositor.rs:6:23
  |
6 | use smithay::wayland::display::Display;
  |                       ^^^^^^^ could not find `display` in `wayland`

error[E0432]: unresolved import `smithay::backend::renderer::gles2`
 --> src/render.rs:2:33
  |
2 | use smithay::backend::renderer::gles2::Gles2Renderer;
  |                                 ^^^^^ could not find `gles2` in `renderer`

error[E0432]: unresolved import `smithay::wayland::shell::xdg::XdgToplevel`
 --> src/shell.rs:1:60
  |
1 | use smithay::wayland::shell::xdg::{XdgToplevelSurfaceData, XdgToplevel, ToplevelState};
  |                                                            ^^^^^^^^^^^ no `XdgToplevel` in `wayland::shell::xdg`
  |
help: a similar name exists in the module
  |
1 - use smithay::wayland::shell::xdg::{XdgToplevelSurfaceData, XdgToplevel, ToplevelState};
1 + use smithay::wayland::shell::xdg::{XdgToplevelSurfaceData, xdg_toplevel, ToplevelState};
  |

error[E0432]: unresolved import `smithay::backend::allocator::BufferHandler`
  --> src/state.rs:13:5
   |
13 | use smithay::backend::allocator::BufferHandler;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `BufferHandler` in `backend::allocator`

error[E0433]: cannot find `gles2` in `renderer`
  --> src/output.rs:21:54
   |
21 |     pub renderer: Option<smithay::backend::renderer::gles2::Gles2Renderer>,
   |                                                      ^^^^^ could not find `gles2` in `renderer`

error[E0433]: cannot find `GbmAllocatorFlags` in `gbm`
  --> src/output.rs:58:99
   |
58 |                         let gbm = GbmAllocator::new(gbm_device, smithay::backend::allocator::gbm::GbmAllocatorFlags::RENDERING);
   |                                                                                                   ^^^^^^^^^^^^^^^^^ could not find `GbmAllocatorFlags` in `gbm`
   |
help: a struct with a similar name exists
   |
58 -                         let gbm = GbmAllocator::new(gbm_device, smithay::backend::allocator::gbm::GbmAllocatorFlags::RENDERING);
58 +                         let gbm = GbmAllocator::new(gbm_device, smithay::backend::allocator::gbm::GbmAllocator::RENDERING);
   |

error[E0433]: cannot find `gles2` in `renderer`
  --> src/output.rs:62:57
   |
62 | ...                   smithay::backend::renderer::gles2::Gles2Renderer::new(egl_display, gbm, dmabuf)
   |                                                   ^^^^^ could not find `gles2` in `renderer`

error[E0433]: cannot find `gles2` in `renderer`
   --> src/output.rs:101:71
    |
101 |     pub fn get_renderer(&self) -> Option<&smithay::backend::renderer::gles2::Gles2Renderer> {
    |                                                                       ^^^^^ could not find `gles2` in `renderer`

error[E0106]: missing lifetime specifier
  --> src/state.rs:23:30
   |
23 |     pub event_loop: EventLoop<AuroraState>,
   |                              ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
16 ~ pub struct AuroraState<'a> {
17 |     pub config: Config,
...
22 |     pub renderer: AuroraRenderer,
23 ~     pub event_loop: EventLoop<'a, AuroraState>,
   |

error[E0106]: missing lifetime specifier
  --> src/state.rs:24:32
   |
24 |     pub loop_handle: LoopHandle<AuroraState>,
   |                                ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
16 ~ pub struct AuroraState<'a> {
17 |     pub config: Config,
...
23 |     pub event_loop: EventLoop<AuroraState>,
24 ~     pub loop_handle: LoopHandle<'a, AuroraState>,
   |

error[E0603]: crate `libinput` is private
 --> src/input.rs:4:56
  |
4 | use smithay::backend::libinput::{LibinputInputBackend, libinput};
  |                                                        ^^^^^^^^ private crate
  |
note: the crate `libinput` is defined here
 --> /home/culpe/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/smithay-0.7.0/src/backend/libinput/mod.rs:8:5
  |
8 | use input as libinput;
  |     ^^^^^

error[E0603]: struct `WlSurface` is private
   --> src/state.rs:11:35
    |
 11 | use smithay::wayland::compositor::WlSurface;
    |                                   ^^^^^^^^^ private struct
    |
note: the struct `WlSurface` is defined here
   --> /home/culpe/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/smithay-0.7.0/src/wayland/compositor/mod.rs:131:78
    |
131 | use wayland_server::protocol::{wl_buffer, wl_callback, wl_output, wl_region, wl_surface::WlSurface};
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^
help: import `WlSurface` directly
    |
 11 - use smithay::wayland::compositor::WlSurface;
 11 + use wayland_server::protocol::wl_surface::WlSurface;
    |

error[E0603]: struct `WlSeat` is private
  --> src/state.rs:50:109
   |
50 |     fn grab(&mut self, _surface: smithay::wayland::shell::xdg::PopupSurface, _seat: smithay::wayland::seat::WlSeat, _serial: smithay::utils::Serial) {
   |                                                                                                             ^^^^^^ private struct
   |
note: the struct `WlSeat` is defined here
  --> /home/culpe/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/smithay-0.7.0/src/wayland/seat/mod.rs:88:25
   |
88 |         wl_seat::{self, WlSeat},
   |                         ^^^^^^
help: import `WlSeat` directly
   |
50 -     fn grab(&mut self, _surface: smithay::wayland::shell::xdg::PopupSurface, _seat: smithay::wayland::seat::WlSeat, _serial: smithay::utils::Serial) {
50 +     fn grab(&mut self, _surface: smithay::wayland::shell::xdg::PopupSurface, _seat: wayland_server::protocol::wl_seat::WlSeat, _serial: smithay::utils::Serial) {
   |

warning: unused imports: `BorderConfig` and `GapsConfig`
 --> src/layout.rs:1:43
  |
1 | use crate::config::{Config, LayoutConfig, GapsConfig, BorderConfig};
  |                                           ^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `XdgToplevelSurfaceData`
 --> src/shell.rs:1:36
  |
1 | use smithay::wayland::shell::xdg::{XdgToplevelSurfaceData, XdgToplevel, ToplevelState};
  |                                    ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `smithay::wayland::compositor::SurfaceData`
 --> src/shell.rs:2:5
  |
2 | use smithay::wayland::compositor::SurfaceData;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `smithay::utils::Serial`
 --> src/shell.rs:3:5
  |
3 | use smithay::utils::Serial;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> src/state.rs:14:5
   |
14 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0046]: not all trait items implemented, missing: `client_compositor_state`
  --> src/state.rs:27:1
   |
27 | impl CompositorHandler for AuroraState {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `client_compositor_state` in implementation
   |
   = help: implement the missing item: `fn client_compositor_state(&self, _: &'a smithay::reexports::wayland_server::Client) -> &'a CompositorClientState { todo!() }`

Some errors have detailed explanations: E0046, E0106, E0432, E0433, E0603.
For more information about an error, try `rustc --explain E0046`.
warning: `aurorawm` (bin "aurorawm") generated 5 warnings
error: could not compile `aurorawm` (bin "aurorawm") due to 14 previous errors; 5 warnings emitted
